--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,10 @@ h3 {
   font-size: 24px;
   text-align: center;
 }
+
+div.bar {
+    display: inline-block;
+    width: 20px;
+    height: 75px;
+    background-color: teal;
+}
