--- a/client/styles.css
+++ b/client/styles.css
@@ -7,11 +7,11 @@ h3 {
   text-align: center;
 }
 
-div.bar {
+/*div.bar {
     display: inline-block;
     width: 20px;
     height: 75px;
     background-color: teal;
     margin-right: 2px;
 }
-
+*/
