--- a/src/styles.css
+++ b/src/styles.css
@@ -18,8 +18,8 @@ a {
 .chart {
   background: lightgray;
   border: 1px solid black;
-  min-width: 200px;
-  min-height: 350px;
+  width: 425px;
+  height: 625px;
 }
 
 .bar {
