--- a/src/styles.css
+++ b/src/styles.css
@@ -57,3 +57,11 @@ rect:hover {
   width: 100px;
   height: 100px;
 }
+
+.block {
+  background: lightgray;
+  border: 1px solid black;
+  width: 50px;
+  height: 50px;
+  margin-bottom: 1em;
+}
